<resources>
    <string name="app_name">InverseWallet</string>
    <string name="text_splash_screen">Inverse</string>
    <string name="text_register">Зарегистрироваться</string>
    <string name="text_entry">Войти</string>
    <string name="text_title_welcome_first">Получите контроль \nза своими деньгами</string>
    <string name="text_description_welcome_first">Станьте своим собственным финансовым менеджером и учитывайте каждый рубль</string>
    <string name="text_title_welcome_second">Знайте, куда уходят ваши деньги</string>
    <string name="text_description_welcome_second">Легко отслеживайте свои транзакции с помощью категорий и финансового отчета</string>
    <string name="text_title_welcome_third">Планирование на будущее</string>
    <string name="text_description_welcome_third">Настройте свой бюджет для каждой категории</string>
    <string name="text_title_registration">Регистрация</string>
    <string name="text_name_registration">Имя</string>
    <string name="text_email_registration">Почта</string>
    <string name="text_password_registration">Пароль</string>
    <string name="text_reg_question">Уже есть аккаунт?</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="forgot_password2">Забыли пароль</string>
    <string name="no_account">У вас еще нет аккаунта?</string>
    <string name="text_register_forgot">Зарегистрируйтесь</string>
    <string name="text_continue">Продолжить</string>
    <string name="text_forgot_description">Не волнуйтесь. \nВведите свой адрес электронной почты, и мы вышлем вам ссылку для сброса пароля.</string>
    <string name="text_letter_title">Ваше письмо уже в пути</string>
    <string name="text_letter_description">Проверьте свою электронную почту и следуйте инструкциям, чтобы сбросить свой пароль</string>
    <string name="text_password_reset">Сброс пароля</string>
    <string name="text_password_new">Новый пароль</string>
    <string name="text_password_confirmation">Подтверждение пароля</string>
    <string name="text_registry_success">Зарегистрировано</string>
    <string name="text_menu">Меню</string>
    <string name="text_payments">Платежи</string>
    <string name="text_budget">Бюджет</string>
    <string name="text_profile">Профиль</string>
    <string name="text_incomes">Доходы</string>
    <string name="text_income">Доход</string>
    <string name="text_expense">Расходы</string>
    <string name="text_expens">Расход</string>
    <string name="text_how_much">Сколько?</string>
    <string name="text_rub">₽</string>
    <string name="text_description">Описание</string>
    <string name="text_scan_qr_code">Сканировать QR-код</string>
    <string name="text_repeat_description">Повторять ежемесячно транзакцию</string>
    <string name="text_repeat">Повторять</string>
    <string name="text_hint_spinner">Категории</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>