<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EntryActivity"
    android:background="@color/white"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:weightSum="1"
                android:layout_marginHorizontal="20dp">

                <ImageButton
                    android:id="@+id/buttonBackEntry"
                    android:layout_width="24dp"
                    android:layout_height="17dp"
                    android:background="@drawable/image_button_back"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:layout_weight="1"
                    android:paddingLeft="-24dp"
                    android:textColor="@color/color_text_main"
                    android:fontFamily="@font/inter_semi_bold"
                    android:text="@string/text_entry"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="56dp">

                <EditText
                    android:id="@+id/editEmailEntry"
                    android:layout_width="match_parent"
                    android:minHeight="60dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:layout_marginHorizontal="25dp"
                    android:hint="@string/text_email_registration"
                    android:textColorHint="@color/color_text_second"
                    android:textColor="@color/color_text_second"
                    android:paddingLeft="20dp"
                    android:fontFamily="@font/inter_regular"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:maxLength="50"
                    android:paddingVertical="10dp"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"
                    android:layout_marginBottom="24dp"
                    android:textCursorDrawable="@drawable/cursor_style_edit_text"/>

                <EditText
                    android:id="@+id/editPasswordEntry"
                    android:layout_width="match_parent"
                    android:minHeight="60dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:layout_marginHorizontal="25dp"
                    android:hint="@string/text_password_registration"
                    android:textColorHint="@color/color_text_second"
                    android:textColor="@color/color_text_second"
                    android:paddingLeft="20dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/inter_regular"
                    android:textStyle="bold"
                    android:password="true"
                    android:maxLength="25"
                    android:paddingVertical="10dp"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/cursor_style_edit_text"
                    tools:ignore="Deprecated" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                android:layout_marginHorizontal="15dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/color_main"
                    android:fontFamily="@font/inter_semi_bold"
                    android:padding="15dp"
                    android:layout_marginHorizontal="5dp"
                    android:text="@string/text_entry"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:cornerRadius="16dp"
                    android:textAllCaps="false"
                    android:stateListAnimator="@null"
                    android:textAppearance="?attr/textAppearanceBody2"/>

                <TextView
                    android:id="@+id/forgotPasswordEntry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="33dp"
                    android:text="@string/forgot_password"
                    android:textSize="18sp"
                    android:fontFamily="@font/inter_semi_bold"
                    android:layout_gravity="center"
                    android:foreground="?attr/selectableItemBackground"
                    android:textColor="@color/color_main"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="33dp"
                    android:text="@string/no_account"
                    android:textSize="16sp"
                    android:fontFamily="@font/inter_medium"
                    android:layout_gravity="center"
                    android:textColor="@color/color_text_second"/>

                <TextView
                    android:id="@+id/clickTextRegEntry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_register_forgot"
                    android:textSize="16sp"
                    android:fontFamily="@font/inter_medium"
                    android:layout_gravity="center"
                    android:foreground="?attr/selectableItemBackground"
                    android:textColor="@color/color_main"/>

            </LinearLayout>

            </LinearLayout>

    </ScrollView>

</LinearLayout>