<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgotPasswordActivity"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:weightSum="1"
                android:layout_marginHorizontal="20dp">

                <ImageButton
                    android:id="@+id/buttonBackForgotPassword"
                    android:layout_width="24dp"
                    android:layout_height="17dp"
                    android:background="@drawable/image_button_back"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:layout_weight="1"
                    android:paddingLeft="-24dp"
                    android:textColor="@color/color_text_main"
                    android:fontFamily="@font/inter_semi_bold"
                    android:text="@string/forgot_password2"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="54dp"
                android:layout_marginHorizontal="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_forgot_description"
                    android:fontFamily="@font/inter_semi_bold"
                    android:textSize="24sp"
                    android:textColor="@color/color_text_third"/>

                <EditText
                    android:id="@+id/editEmailForgot"
                    android:layout_width="match_parent"
                    android:minHeight="60dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="32dp"
                    android:hint="@string/text_email_registration"
                    android:textSize="16sp"
                    android:textColorHint="@color/color_text_second"
                    android:textColor="@color/color_text_second"
                    android:paddingLeft="20dp"
                    android:fontFamily="@font/inter_regular"
                    android:textStyle="bold"
                    android:maxLength="50"
                    android:paddingVertical="10dp"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"
                    android:layout_marginBottom="32dp"
                    android:textCursorDrawable="@drawable/cursor_style_edit_text"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonForgotContinue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/color_main"
                    android:fontFamily="@font/inter_semi_bold"
                    android:padding="15dp"
                    android:layout_marginHorizontal="5dp"
                    android:text="@string/text_continue"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:cornerRadius="16dp"
                    android:textAllCaps="false"
                    android:stateListAnimator="@null"
                    android:textAppearance="?attr/textAppearanceBody2"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>