<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.IncomeActivity"
    android:background="@color/color_icon_green"
    android:weightSum="2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:weightSum="1"
                android:layout_marginHorizontal="20dp">

                <ImageButton
                    android:id="@+id/buttonBacIncome"
                    android:layout_width="24dp"
                    android:layout_height="17dp"
                    android:backgroundTint="@color/white"
                    android:background="@drawable/image_button_back"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter_semi_bold"
                    android:gravity="center"
                    android:paddingLeft="-24dp"
                    android:text="@string/text_incomes"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="bottom"
            android:layout_marginHorizontal="25dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_how_much"
                android:fontFamily="@font/inter_semi_bold"
                android:textSize="18sp"
                android:layout_marginBottom="15dp"
                android:textColor="@color/color_plus2"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_rub"
                    android:fontFamily="@font/inter_semi_bold"
                    android:textSize="64sp"
                    android:textColor="@color/color_plus"
                    />

                <EditText
                    android:id="@+id/editIncomeNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background_nothing"
                    android:hint="0"
                    android:textColorHint="@color/color_plus"
                    android:textStyle="bold"
                    android:maxLength="12"
                    android:fontFamily="@font/inter_semi_bold"
                    android:textSize="64sp"
                    android:textColor="@color/color_plus"
                    android:paddingVertical="10dp"
                    android:singleLine="true"
                    android:inputType="number"
                    android:textCursorDrawable="@drawable/cursor_style_edit_text2"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/radius_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="16dp">
                    
                    <Spinner
                        android:id="@+id/spinnerIncome"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="44dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/spinner_custom"
                        />

                    <EditText
                        android:id="@+id/editDescriptionIncome"
                        android:layout_width="match_parent"
                        android:minHeight="60dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/text_description"
                        android:textColorHint="@color/color_text_second"
                        android:textColor="@color/color_text_second"
                        android:paddingLeft="20dp"
                        android:fontFamily="@font/inter_regular"
                        android:textStyle="bold"
                        android:maxLength="20"
                        android:paddingVertical="10dp"
                        android:singleLine="true"
                        android:textSize="16sp"
                        android:textCursorDrawable="@drawable/cursor_style_edit_text"/>

                    <LinearLayout
                        android:id="@+id/layoutQRCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginVertical="16dp"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:src="@drawable/baseline_qr_code_24"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_scan_qr_code"
                            android:layout_gravity="center"
                            android:layout_marginLeft="10dp"
                            android:textSize="16sp"
                            android:textColor="@color/color_text_second"
                            android:fontFamily="@font/inter_regular"/>

                    </LinearLayout>
                    
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="1"
                        android:layout_marginVertical="16dp">
                        
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">
                            
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_repeat"
                                android:fontFamily="@font/inter_medium"
                                android:textSize="16sp"
                                android:textColor="@color/color_text_fourth"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_repeat_description"
                                android:fontFamily="@font/inter_medium"
                                android:textSize="13sp"
                                android:layout_marginTop="4dp"
                                android:textColor="@color/color_text_second"/>
                            
                        </LinearLayout>
                        
                        <Switch
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:thumb="@drawable/thumb"
                            android:track="@drawable/thumb_track" />
                        
                    </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonNextIncome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="@color/color_main"
                        android:fontFamily="@font/inter_semi_bold"
                        android:padding="15dp"
                        android:stateListAnimator="@null"
                        android:text="@string/text_continue"
                        android:textAllCaps="false"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:cornerRadius="16dp"
                        android:layout_marginBottom="10dp"/>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>